--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>hello</title>
 </head>
 <body>
-<h1>hello coursera
-</h1>
+<h1>hello coursera</h1>
+<b>succesfully git pushed a page</b>
 </body>
 </html>
